Fixed overflow in the modal

--- a/app/assets/stylesheets/avalon.scss
+++ b/app/assets/stylesheets/avalon.scss
@@ -634,6 +634,10 @@ div.structure_edit {
     margin-bottom: 10px;
     margin-top: 4px;
   }
+
+  .modal-content {
+    overflow: auto;
+  }
 }
 
 .item_note_header {
